--- a/analysis/ctwas_network_analysis.Rmd
+++ b/analysis/ctwas_network_analysis.Rmd
@@ -15,7 +15,7 @@ library(tidyverse)
 ```
 
 ### LDL
-Functions of clusters in the network
+Functions of clusters in the network: 
 * The biggest cluster is Cholesterol metabolism.
 * DMTN, INHBB, ACVR1C: Activin receptor signaling pathway. 
 * USP53, USP39, TRIM39: Ubiquitin carboxyl-terminal hydrolase. TRIM39 is an E3 ubiquitin ligase. 
@@ -35,7 +35,7 @@ ggraph(graph, layout = "fr", niter = 1000, area = vcount(graph)^2.4) +
 ```
 
 ### IBD
-Functions of clusters in the network
+Functions of clusters in the network:
 * The biggest cluster is Leukocyte and Lymphocyte activiation. 
 * GPR35 and RGS14: They are connected in the G protein signaling network. GPR35, when activated, signals through G proteins. RGS14 can regulate the duration and strength of such GPCR signals by accelerating GPT hydrolysis in Ga subunits
 * ADAM15 and IP6K2: cell adhesion, migration and apoptosis. 
